# fastapi-poetry-ml-template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.py
app/: config.py  main.py
app/routes/: api_router.py  main_router.py
app/routes/predict/: model_controller.py  model_service.py
app/routes/predict/dto/: model_prediction.py
app/services/: core_service.py
app/services/model/: model.py  model_config.py
app/shared/models/: orm_base_model.py
app/shared/models/settings/: settings.py
app/shared/utilities/: configurator.py  constants.py  simple_dict.py  utilities.py
